--- a/onboarding/package.json
+++ b/onboarding/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase-mantine-login",
+  "name": "onboarding",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.13.0",
     "@mantine/core": "^7.12.0",
     "@mantine/hooks": "^7.12.0",
+    "@mui/material": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
